--- a/.github/workflows/dockerimagedev.yml
+++ b/.github/workflows/dockerimagedev.yml
@@ -17,4 +17,4 @@ jobs:
       with:
         run-script-python3: 'test/version.py'
     - name: Get the output result
-      run: echo "The result is ${{ steps.testAction.outputs.result-python3 }}"
+      run: echo -e "The result is ${{ steps.testAction.outputs.result-python3 }}"
